hphp/hack/test/typecheck/dynamic_props2.php.exp
File "dynamic_props2.php", line 12, characters 11-11:
Variable Variables are not legal (Parsing[1002])
